tests/neg/dedented-string-literals.check
-- Error: tests/neg/dedented-string-literals.scala:4:30 ----------------------------------------------------------------
4 |  val noNewlineAfterOpen = '''content on same line // error: dedented string literal must start with newline after opening quotes
  |                              ^
  |                              Dedented string literal must start with newline after opening quotes
-- Error: tests/neg/dedented-string-literals.scala:9:0 -----------------------------------------------------------------
9 |content // error: line in dedented string literal must be indented at least as much as the closing delimiter with an identical prefix
  |^
  |Line in dedented string literal must be indented at least as much as the closing delimiter
  |This indent   : 0 spaces
  |Closing indent: 2 spaces
-- Error: tests/neg/dedented-string-literals.scala:13:1 ----------------------------------------------------------------
13 |	tab line // error: line in dedented string literal must be indented at least as much as the closing delimiter with an identical prefix
   |	^
   |	Line in dedented string literal must be indented at least as much as the closing delimiter
   |	This indent   : 1 tab
   |	Closing indent: 2 spaces
-- Error: tests/neg/dedented-string-literals.scala:19:5 ----------------------------------------------------------------
19 |  text''' // error: last line of dedented string literal must contain only whitespace before closing delimiter
   |     ^
   |     Last line of dedented string literal must contain only whitespace before closing delimiter
-- Error: tests/neg/dedented-string-literals.scala:22:3 ----------------------------------------------------------------
22 |	  content // error: dedented string literal cannot mix tabs and spaces in indentation
   |	  ^
   |	  Line in dedented string literal must be indented at least as much as the closing delimiter
   |	  This indent   : 1 tab, 2 spaces
   |	  Closing indent: 4 spaces
-- Error: tests/neg/dedented-string-literals.scala:27:4 ----------------------------------------------------------------
27 |    ''''  // error last line of dedented string literal must contain only whitespace before closing delimiter
   |    ^
   |    Last line of dedented string literal must contain only whitespace before closing delimiter
-- Error: tests/neg/dedented-string-literals.scala:32:2 ----------------------------------------------------------------
32 |  $<bad // error: invalid string interpolation
   |  ^
   |  invalid string interpolation: `$$`, `$'`, `$`ident or `$`BlockExpr expected
-- Error: tests/neg/dedented-string-literals.scala:39:17 ---------------------------------------------------------------
39 |  val unclosed = ''' // error
   |                 ^
   |                 unclosed multi-line string literal
